// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appButton color "danger" 1`] = `
<button
  class="btn btn-sm btn-danger"
>
  
  
</button>
`;

exports[`appButton color "primary" 1`] = `
<button
  class="btn btn-sm btn-primary"
>
  
  
</button>
`;

exports[`appButton color "success" 1`] = `
<button
  class="btn btn-sm btn-success"
>
  
  
</button>
`;

exports[`appButton size "lg" 1`] = `
<button
  class="btn btn-sm btn-lg"
>
  
  
</button>
`;

exports[`appButton size "sm" 1`] = `
<button
  class="btn btn-sm btn-sm"
>
  
  
</button>
`;

exports[`appButton size "xl" 1`] = `
<button
  class="btn btn-sm btn-xl"
>
  
  
</button>
`;

exports[`appButton size "xs" 1`] = `
<button
  class="btn btn-sm btn-xs"
>
  
  
</button>
`;
